package com.iokays.designpattern.abstractfactory.pizza;

import io.swagger.annotations.ApiModel;

@ApiModel("蔬菜披萨")
public class VeggiePizza extends Pizza {

        PizzaIngredientFactory ingredientFactory;

        public VeggiePizza(PizzaIngredientFactory ingredientFactory) {
            this.ingredientFactory = ingredientFactory;
        }

        @Override
        public void prepare() {
            System.out.println("准备 " + name);
            dough = ingredientFactory.createDough();
            sauce = ingredientFactory.createSauce();
            cheese = ingredientFactory.createCheese();
            veggies = ingredientFactory.createVeggies();
        }
}
