package com.iokays.designpatterns.simplefactory;

public class PepperoniPizza extends Pizza {
}
