@startuml
'https://plantuml.com/class-diagram

interface PizzaIngredientFactory {
    + createDough()
    + createSauce()
    + createCheese()
    + createVeggies()
    + createPepperoni()
    + createClam()
}

class NYPizzaIngredientFactory {
    + createDough()
    + createSauce()
    + createCheese()
    + createVeggies()
    + createPepperoni()
    + createClam()
}

class ChicagoPizzaIngredientFactory {
    + createDough()
    + createSauce()
    + createCheese()
    + createVeggies()
    + createPepperoni()
    + createClam()
}

NYPizzaIngredientFactory ..|> PizzaIngredientFactory
ChicagoPizzaIngredientFactory ..|> PizzaIngredientFactory

class Pizza {
    - name
    - dough
    - sauce
    - veggies
    - cheese
    - pepperoni
    - clam
    + prepare()
    + bake()
    + cut()
    + box()
    + setName()
    + getName()
    + toString()
}

class CheesePizza {
    + prepare()
}

class ClamPizza {
    + prepare()
}

class VeggiePizza {
    + prepare()
}

class PepperoniPizza {
    + prepare()
}

CheesePizza --|> Pizza
ClamPizza --|> Pizza
VeggiePizza --|> Pizza
PepperoniPizza --|> Pizza

class PizzaStore {
    + orderPizza()
    - createPizza()
}

class NYPizzaStore {
    - createPizza()
}

class ChicagoPizzaStore {
    - createPizza()
}

NYPizzaStore --|> PizzaStore
ChicagoPizzaStore --|> PizzaStore

PizzaStore o-- Pizza
PizzaStore --> PizzaIngredientFactory

NYPizzaStore -down-> NYPizzaIngredientFactory
ChicagoPizzaStore -down-> ChicagoPizzaIngredientFactory




@enduml